[package]
name = "intmax2-cli"
version.workspace = true
edition = "2021"

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
common = { path = "../common" }
env_logger = { workspace = true }
intmax2-zkp = { workspace = true }
intmax2-client-sdk = { path = "../client-sdk" }
intmax2-interfaces = { path = "../interfaces" }
plonky2 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread"] }
uuid = { workspace = true }
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
csv = "1.3.1"
dirs = "6.0.0"
dotenvy = "0.15.0"
envy = "0.4.2"
futures = "0.3.31"
hex = "0.4.3"
log = "0.4.27"
num-bigint = "0.4.6"
serde_qs = "0.15.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
url = { version = "2.5.4", features = ["serde"] }